--- a/css/styles.css
+++ b/css/styles.css
@@ -242,7 +242,6 @@ nav h1 a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 780px;
 }
 #reviews-container {
   padding: 0px;
@@ -256,13 +255,13 @@ nav h1 a {
 }
 #reviews-list {
   width: 100%;
-  margin: 10px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 #reviews-list li {
   background-color: #fff;
+  border-radius: 20px 0px;
   border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
@@ -275,6 +274,28 @@ nav h1 a {
 #reviews-list li p {
   margin: 0 0 10px;
 }
+
+#reviews-list .rating {
+	border-radius: 3px;
+	display: inline-block;
+	padding: 5px;
+	background-color: orange;
+	color:white;
+}
+
+#reviews-list li p:nth-child(1) {
+	border-radius: 3px;
+	padding: 5px;
+	color: white;
+    background-color: #4f4c4c;
+}
+
+
+
+
+
+
+
 #restaurant-hours td {
   color: #666;
   margin-left: 20px;
@@ -286,6 +307,7 @@ nav h1 a {
   }
   #restaurants-list li {
     width: 100%;
+	padding-bottom: 20px;
   }
   #reviews-list li {
     width: 100%;
