--- a/css/styles.css
+++ b/css/styles.css
@@ -38,9 +38,6 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
 }
 #footer {
   background-color: #444;
@@ -55,6 +52,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 nav {
   background-color: #252831;
   text-align:center;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 nav h1 {
   margin: auto;
@@ -72,6 +72,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
+	width: 100%;
 }
 
 /* Display list items side by side */
@@ -99,14 +100,16 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 300px;
   width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   display: flex;
+  flex-direction: column;
   width: 100%;
+  height: 100%;
   background-color: #3397DB;
   align-items: center;
   padding: 10px;
@@ -133,7 +136,7 @@ nav h1 a {
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
-  list-style: none;
+  list-style: outside none none;
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
@@ -149,7 +152,7 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  width: 100%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -188,14 +191,14 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
-  position: relative;
-  top: 0;
   width: 100%;
   z-index: 1000;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 400px;
+  height: 100vh;
+  width: 100%;
+  margin: auto;
 }
 .inside #map {
   background-color: #ccc;
@@ -203,8 +206,6 @@ nav h1 a {
   width: 100%;
 }
 .inside #footer {
-  bottom: 0;
-  position: relative;
   width: 100%;
 }
 #restaurant-name {
@@ -218,7 +219,8 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 100%;
+	width: 90%;
+	border-radius: 20px 0 0 0;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -235,16 +237,19 @@ nav h1 a {
   text-align: center;
   text-transform: uppercase;
   width: 90%;
+  border-radius: 0 0 20px 0;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  max-width: 560px;
 }
 #reviews-container {
-  padding: 0px;
+  /*padding: 0px;*/
 }
 #reviews-container h2 {
   color: #f58500;
@@ -257,49 +262,48 @@ nav h1 a {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
+  padding:0;
+  margin:0;
 }
 #reviews-list li {
-  background-color: #fff;
-  border-radius: 20px 0px;
-  border: 2px solid #f3f3f3;
-  display: block;
-  list-style-type: none;
-  margin: 0 0 30px;
-  overflow: hidden;
-  padding: 20px;
-  position: relative;
-  width: calc(50% - 50px);
+	background-color: #fff;
+    border: 2px solid #f3f3f3;
+    display: block;
+    list-style-type: none;
+    margin: 0 0 30px;
+    overflow: hidden;
+    padding: 0 0 10px 0;
+    position: relative;
+    width: 95%;
+    border-radius: 20px 0 20px 0;
 }
 #reviews-list li p {
   margin: 0 0 10px;
+  padding: 0 10px;
 }
 
 #reviews-list .rating {
 	border-radius: 3px;
 	display: inline-block;
-	padding: 5px;
+	padding: 5px 10px;
 	background-color: orange;
 	color:white;
+	text-transform: uppercase;
 }
 
 #reviews-list li p:nth-child(1) {
-	border-radius: 3px;
-	padding: 5px;
+	padding: 10px 20px;
 	color: white;
     background-color: #4f4c4c;
 }
-
-
-
-
-
-
 
 #restaurant-hours td {
   color: #666;
   margin-left: 20px;
 }
+
+/* ====================== Media Queries ====================== */
 
 @media screen and (max-width: 600px) {
   .filter-options {
@@ -313,6 +317,15 @@ nav h1 a {
     width: 100%;
   }
   #restaurant-container {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1150px) {
+  #reviews-container, #restaurant-container {
+    max-width: 100%;
+  }
+  #reviews-list li {
     width: 100%;
   }
 }
