--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ nav h1 a {
   height: 100%;
   background-color: #3397DB;
   align-items: center;
-  padding: 10px;
+  padding-top: 10px;
 }
 .filter-options h2 {
   color: white;
@@ -152,14 +152,14 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 100%;
+  width: auto;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
+  height: auto;
   min-width: 100%;
 }
 #restaurants-list li h1 {
